# $Id$

New in 2.9.0
  <already adding news for 2.9.0 would be nice>

New in 2.8.0
- Core
  + Inlined hashing and comparison functions
  + Hash memory allocation moved from system malloc to lazy allocated
  + Avoided infinite catching of exceptions while dying from exception
  + Some svn fixes
  + Added a check for duplicate vtable entries in PMCs
  + Building Parrot with Perl 5.12 and gcc-4.5 / g++-4.5
  + Eliminated cruft left over after dynops_mapping
  + Improved charset and string encoding
  + Better organisation of programs by reposition it to "tools/build" and "tools/release"
  + Implemented Exception clone vtable function
  + Added experimental function Parrot_getpid and getpid method
  + --gc-threshold command line argument added, which controls the % of memory wasted by the GC
  + Closed a lot of tickets
- Testing
  + Added more core pmc tests
  + Rearranged some tests with C coverage
  + We now have Smolder back, at http://smolder.parrot.org . Submit reports with "make smoke"
  + skip_all implementation in Parrot's Test::More completed
- GitMigration
  + Set up a test site for github trac plugin at http://mksig.org/trac/
  + Code of Trac plugin at github is on http://github.com/cotto/github-trac
  + Parrot is now mirrored on github at http://github.com/parrot/parrot
- Compilers
  + Fixed problem with imcc HLL in load_bytecode difference between loading a pbc and compiling a pir
 
New in 2.7.0
- Core
  + cleanups in packfile and freeze/thaw handling
  + Hash optimizations that improve HLL startup and run time
  + As always, many bug fixes and other optimizations
- Runtime
  + some runtime library cleanups
- Testing
  + added more tests to improve coverage
  + new codingstd test for documentation in .pmc files
- Documentation
  + added documentation to .pmc files (some still missing but headers in place)
  + general documentation improvements and bringing up-to-date
- NQP-rx
  + Updated version included from http://github.com/perl6/nqp-rx includes