@@ -601,6 +601,21 @@ Get/set the C<hll> for this block.
 .end
 
 
+=item loadlibs([lib1, lib2, ...])
+
+Get/set the libraries to be loaded at startup. EXPERIMENTAL (not subject to
+deprecation policy, yet).
+
+=cut
+
+.sub 'loadlibs' :method
+    .param pmc libs :slurpy
+    .local int has_value
+    has_value = elements libs
+    .tailcall self.'attr'('loadlibs', libs, has_value)
+.end
+
+
 =item nsentry([nsentry])
 
 Get/set the C<nsentry> for this block.
