@@ -1,7 +1,12 @@
 # $Id$
 
 New in 2.9.0
-  <already adding news for 2.9.0 would be nice>
+- Core
+  + New default garbage collector
+- Testing
+  + "make smoke" now respects TEST_JOBS
+- GitMigration
+- Compilers
 
 New in 2.8.0
 - Core
